@@ -2,7 +2,6 @@ package com.house.item.domain;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.house.item.entity.ItemLabel;
 
@@ -18,6 +17,7 @@ public class ConsumableItemRS {
     private LocalDateTime latestConsumeDate;
     private LocalDateTime latestPurchaseDate;
     private int quantity;
+    private int threshold;
     private List<LabelRS> labels;
     private String roomName;
     private String placeName;
@@ -30,11 +30,12 @@ public class ConsumableItemRS {
             .latestConsumeDate(dto.getLatestConsume())
             .latestPurchaseDate(dto.getLatestPurchase())
             .quantity(dto.getItem().getQuantity())
+            .threshold(dto.getItem().getThreshold())
             .labels(
                 dto.getItem().getItemLabels().stream()
                     .map(ItemLabel::getLabel)
                     .map(LabelRS::of)
-                    .collect(Collectors.toList())
+                    .toList()
             )
             .roomName(dto.getItem().getLocation().getRoom().getName())
             .placeName(dto.getItem().getLocation().getName())
